--- a/css/style.css
+++ b/css/style.css
@@ -112,8 +112,25 @@ img{
   }
 }
 
+/* Media Query for low resolution  Tablets, Ipads */
+@media (min-width: 481px) and (max-width: 768px) {
+  .heading-container {
+    font-size: 2em;
+    padding: 0.3em 0em;
+  }
+  .options-container {
+    margin: 7em 0 1em 0;
+  }
+}
 
-
-
-
+ /* Media Query for Mobile Devices */
+ @media (max-width: 480px) {
+  .heading-container {
+    font-size: 0.5em;
+    padding: 0.5em 0em;
+  }
+  .options-container {
+    margin: 6em 0 1.2em 0;
+  }
+}
 
